# Nyaay

./: .gitignore
backend/: main.py  pyproject.toml
backend/chroma_db/c951bca5-79f0-4bce-94f3-b366ee4c74a1/: index_metadata.pickle
backend/routes/: ask.py  upload.py
backend/services/: LLM.py  chunking.py  embedding.py  retrieval.py  test_RAG.py  text.py
