[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.5.1",
]
