[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "groq>=1.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.47.0",
]
